--- a/ProjectBank/Client/Shared/PdfUploader.razor
+++ b/ProjectBank/Client/Shared/PdfUploader.razor
@@ -13,8 +13,8 @@
         @if (!string.IsNullOrWhiteSpace(fileUrl))
         {
             <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><a style="color: #0a53be" href="@fileUrl" download="@fileName">Preview file</a></div>
-            <button type="button" @onclick="UploadFile" class="btn btn-secondary" style="background-color:darkgreen; opacity: 70">Upload</button>
-            <button type="button" @onclick="ClearFile" class="btn btn-secondary" >Clear</button>
+            <RadzenButton style="width: 160px;" Icon="save" BusyText="Saving ..." IsBusy=@busy Click=@UploadFile Text="Upload" />
+            <RadzenButton style="width: 160px;" IsBusy=@busy Click=@ClearFile Text="Clear" />
             
         }@if (sizeExceeded)
          {
@@ -35,6 +35,7 @@
     private string fileUrl = string.Empty;
 
     private IBrowserFile? pdfFile;
+    private bool busy;
 
     private bool sizeExceeded;
     protected override async Task OnInitializedAsync()
@@ -53,6 +54,7 @@
     
     private async Task UploadFile()
     {
+        busy = true;
         if (pdfFile != null)
         {
             var bytes = new byte[pdfFile.Size];
@@ -68,15 +70,21 @@
                 project.FileUrl = response.Headers.Location?.ToString();
                 var updated = await Http.PutAsJsonAsync($"api/Project/{project.Id}", project);
                 Console.WriteLine(updated.StatusCode);
+                NavigationManager.NavigateTo(NavigationManager.Uri, forceLoad: true);
             }
         }
+        await Task.Delay(2000);
+        busy = false;
     }
 
-    private void ClearFile()
+    private async Task ClearFile()
     {
+        busy = true;
         fileUrl = string.Empty;
         pdfFile = null;
         StateHasChanged();
+        await Task.Delay(2000);
+        busy = false;
     }
 
     private void Cancel()
