--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -136,7 +136,7 @@
     
     
 
-    private async Task AddOrRemoveFavorite(string t) //Post virker
+    private async Task AddOrRemoveFavorite(string t)
     {
 
         if (_likedProjects.Contains(t))
