--- a/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
+++ b/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
@@ -15,7 +15,7 @@
             {
                 <div style="padding: 1em;"><img src="@_project.ImageUrl" alt="Project Image missing" class="img-thumbnail" style="padding: 1em"></div>
             }
-            <ImageUploader Id="int.Parse(Id ?? string.Empty)" isProject="true"></ImageUploader>
+            <ImageUploader Id="int.Parse(Id ?? string.Empty)" IsProject="true"></ImageUploader>
         </div>
     </div>
     <div class="row" style="padding: 1em">
