--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -1,20 +1,20 @@
 @using System.Net.Http.Headers
-@inject HttpClient Http
-@inject NavigationManager NavigationManager
+@inject HttpClient _http
+@inject NavigationManager _navigationManager
 
 <div class="form-group input-group">
     <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
 </div>
 <div class="form-group">
-        @if (!string.IsNullOrWhiteSpace(imageUrl))
+        @if (!string.IsNullOrWhiteSpace(_imageUrl))
         {
-            <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@imageUrl" alt="Project Image" class="img-thumbnail"></div>
+            <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@_imageUrl" alt="Project Image" class="img-thumbnail"></div>
             <div style="padding: 0.5em">
-                <RadzenButton style="width: 160px" Icon="save" BusyText="Saving ..." IsBusy=@busy Click=@UploadImage Text="Upload" />
-                <RadzenButton style="width: 160px" IsBusy=@busy Click=@ClearImage Text="Clear" />
+                <RadzenButton style="width: 160px" Icon="save" BusyText="Saving ..." IsBusy=@_busy Click=@UploadImage Text="Upload" />
+                <RadzenButton style="width: 160px" IsBusy=@_busy Click=@ClearImage Text="Clear" />
             </div>
             
-        }@if (sizeExceeded)
+        }@if (_sizeExceeded)
          {
              <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
          }
@@ -25,126 +25,133 @@
     public int Id { get; set; }
 
     [Parameter]
-    public bool isProject { get; set; }
+    public bool IsProject { get; set; }
 
-    private ProjectDetailsDto toBeUpdated;
+    private ProjectDetailsDto? _toBeUpdated;
 
-    private AccountDetailsDto toBeUpdatedAccount;
+    private AccountDetailsDto? _toBeUpdatedAccount;
 
-    private ProjectUpdateDto? project;
+    private ProjectUpdateDto? _project;
 
-    private AccountUpdateDto? account;
+    private AccountUpdateDto? _account;
 
-    private string imageName = Guid.NewGuid().ToString();
+    private string _imageName = Guid.NewGuid().ToString();
 
-    private string imageUrl = string.Empty;
+    private string _imageUrl = string.Empty;
 
-    private IBrowserFile? imageFile;
-    private bool sizeExceeded;
-    private bool busy;
+    private IBrowserFile? _imageFile;
+    private bool _sizeExceeded;
+    private bool _busy;
 
     protected override async Task OnInitializedAsync()
     {
-        if (isProject)//if project
+        if (IsProject)//if project
         {
-            toBeUpdated = await Http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
-            if (toBeUpdated != null)
+            _toBeUpdated = await _http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
+            if (_toBeUpdated != null)
             {
-                project = new ProjectUpdateDto()
+                _project = new ProjectUpdateDto()
                 {
-                    Id = toBeUpdated.Id, Degree = toBeUpdated.Degree, Title = toBeUpdated.Title,
-                    Description = toBeUpdated.Description, Ects = toBeUpdated.Ects, Keywords = toBeUpdated.Keywords, AuthorName = toBeUpdated.AuthorName,
-                    AuthorToken = toBeUpdated.AuthorToken, FileUrl = toBeUpdated.FileUrl, ImageUrl = toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
+                    Id = _toBeUpdated.Id, Degree = _toBeUpdated.Degree, Title = _toBeUpdated.Title,
+                    Description = _toBeUpdated.Description, Ects = _toBeUpdated.Ects, Keywords = _toBeUpdated.Keywords, AuthorName = _toBeUpdated.AuthorName,
+                    AuthorToken = _toBeUpdated.AuthorToken, FileUrl = _toBeUpdated.FileUrl, ImageUrl = _toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
                 };
             }
         }
         else //if account
         {
-            toBeUpdatedAccount = await Http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy{Id}");
-            if (toBeUpdatedAccount != null)
+            try
             {
-                account = new AccountUpdateDto()
+                _toBeUpdatedAccount = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy/{Id}");
+            }
+            catch (NullReferenceException e)
+            {
+                //This works. Why is an exception thrown. Called before async is returned?
+                Console.WriteLine(e);
+            }
+            if (_toBeUpdatedAccount != null)
+            {
+                _account = new AccountUpdateDto()
                 {
-                    Id = toBeUpdatedAccount.Id, PictureUrl = toBeUpdatedAccount.PictureUrl, Name = toBeUpdatedAccount.Name,
-                    SavedProjects = toBeUpdatedAccount.SavedProjects, AzureAAdToken = toBeUpdatedAccount.AzureAdToken
+                    Id = _toBeUpdatedAccount.Id, PictureUrl = _toBeUpdatedAccount.PictureUrl, Name = _toBeUpdatedAccount.Name,
+                    SavedProjects = _toBeUpdatedAccount.SavedProjects, AzureAAdToken = _toBeUpdatedAccount.AzureAdToken
                 };
             }
         }
-        
     }
 
     private async Task UploadImage()
     {
-        busy = true;
+        _busy = true;
 
-        if (imageFile != null)
+        if (_imageFile != null)
         {
-            var bytes = new byte[imageFile.Size];
-            await imageFile.OpenReadStream(1024000).ReadAsync(bytes);
+            var bytes = new byte[_imageFile.Size];
+            await _imageFile.OpenReadStream(1024000).ReadAsync(bytes);
             var byteContent = new ByteArrayContent(bytes);
-            byteContent.Headers.ContentType = new MediaTypeHeaderValue(imageFile.ContentType);
+            byteContent.Headers.ContentType = new MediaTypeHeaderValue(_imageFile.ContentType);
             var content = new MultipartFormDataContent();
-            content.Add(byteContent, "file", imageFile.Name);
-            var response = await Http.PostAsync($"api/Image/{imageName}", content);
+            content.Add(byteContent, "file", _imageFile.Name);
+            var response = await _http.PostAsync($"api/Image/{_imageName}", content);
 
             if (response.IsSuccessStatusCode)
             {
-                if (project != null)
+                if (_project != null)
                 {
                     {
-                        project.ImageUrl = response.Headers.Location?.ToString();
-                        var updated = await Http.PutAsJsonAsync($"api/Project/{project.Id}", project);
+                        _project.ImageUrl = response.Headers.Location?.ToString();
+                        var updated = await _http.PutAsJsonAsync($"api/Project/{_project.Id}", _project);
                         Console.WriteLine(updated.StatusCode);
                     }
                 }
-                else if (account != null)
+                else if (_account != null)
                 {
                     {
-                        account.PictureUrl = response.Headers.Location?.ToString();
-                        var updated = await Http.PutAsJsonAsync($"api/Account/{account.Id}", account);
+                        _account.PictureUrl = response.Headers.Location?.ToString();
+                        var updated = await _http.PutAsJsonAsync($"api/Account/{_account.Id}", _account);
                         Console.WriteLine(updated.StatusCode);
                     }
                 }
-                NavigationManager.NavigateTo(NavigationManager.Uri, forceLoad: true);
+                _navigationManager.NavigateTo(_navigationManager.Uri, forceLoad: true);
             }
             await Task.Delay(2000);
-            busy = false;
+            _busy = false;
         }
     }
     private async Task ClearImage()
     {
-        busy = true;
-        imageUrl = string.Empty;
-        imageFile = null;
+        _busy = true;
+        _imageUrl = string.Empty;
+        _imageFile = null;
         await Task.Delay(2000);
-        busy = false;
+        _busy = false;
     }
 
     private void Cancel()
     {
-        var uri = $"{NavigationManager.BaseUri}";
+        var uri = $"{_navigationManager.BaseUri}";
 
-        NavigationManager.NavigateTo(uri);
+        _navigationManager.NavigateTo(uri);
         
     }
 
     private async Task OnFileSelection(InputFileChangeEventArgs e)
     {
-        sizeExceeded = false;
-        imageFile = e.GetMultipleFiles().FirstOrDefault();
+        _sizeExceeded = false;
+        _imageFile = e.GetMultipleFiles().FirstOrDefault();
 
-        if (imageFile != null)
+        if (_imageFile != null)
         {
             try
             {
-                var bytes = new byte[imageFile.Size];
-                await imageFile.OpenReadStream(1024000).ReadAsync(bytes);
-                var contentType = imageFile.ContentType;
-                imageUrl = $"data:{contentType};base64,{Convert.ToBase64String(bytes)}";
+                var bytes = new byte[_imageFile.Size];
+                await _imageFile.OpenReadStream(1024000).ReadAsync(bytes);
+                var contentType = _imageFile.ContentType;
+                _imageUrl = $"data:{contentType};base64,{Convert.ToBase64String(bytes)}";
             }
             catch (IOException exception)
             {
-                sizeExceeded = true;
+                _sizeExceeded = true;
                 Console.WriteLine(exception);
             }
             
